main/default/objects/Workplan_Item__c/Workplan_Item__c.object-meta.xml
<CustomObject>
    <label>Workplan Task</label>
    <nameField>
        <label>Workplan Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workplan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>