main/default/objects/Workplan_Item__c/fields/Key_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Key_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAPM-AGL-305-DV</description>
    <label>Key Milestone</label>
    <type>Checkbox</type>
</CustomField>