main/default/objects/Workplan_Item__c/fields/Link_to_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Deliverable__c</fullName>
    <label>Link to Deliverable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>