main/default/objects/Workplan_Item__c/fields/Workplan__c.field-meta.xml
<CustomField>
    <fullName>Workplan__c</fullName>
    <label>Workplan</label>
    <referenceTo>Workplan__c</referenceTo>
    <relationshipName>Workplan_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>