main/default/objects/Workplan_Item__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Development (BD)​</fullName>
            </value>
            <value>
                <fullName>Contract Management​</fullName>
            </value>
            <value>
                <fullName>Financial Management​</fullName>
            </value>
            <value>
                <fullName>Marketing and Strategic Communications​</fullName>
            </value>
            <value>
                <fullName>Partners and Subcontracts Management​</fullName>
            </value>
            <value>
                <fullName>Production Support​</fullName>
            </value>
            <value>
                <fullName>Program Management​</fullName>
            </value>
            <value>
                <fullName>Systems Administration​</fullName>
            </value>
            <value>
                <fullName>Team Management (Edera)​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>