main/default/objects/Workplan_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Workplan__c</columns>
    <columns>NAME</columns>
    <columns>Duration__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>